--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Legwork Studio",
+  "name": "Legwork2015",
   "version": "0.0.0",
   "authors": [
     "Legdevs <devs@legworkstudio.com>"
