--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Legwork Studio",
+  "name": "Legwork2015",
   "version": "0.0.1",
   "description": "The 2015 Legsite.",
   "repository": {
