--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "sass-meyer-reset": null,
     "greensock": null,
     "pixi": "~2.1.1",
-    "froogaloop": "~0.1.0"
+    "froogaloop": "~0.1.0",
+    "jquery.cookie": "~1.4.1"
   }
 }
