--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "git@github.com:legworkstudio/Legwork2015.git"
   },
+  "scripts": {
+    "start": "forever ./www/server"
+  },
   "browser": {
     "plugin": "./src/javascript/vendor/jquery-plugin.js"
   },
@@ -50,6 +53,14 @@
     "gulp-webserver": "^0.8.7",
     "jquery": "*",
     "path": "^0.4.9",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "express": "~4.12.2",
+    "serve-favicon": "~2.2.0",
+    "morgan": "*",
+    "ejs": "*",
+    "forever": "*"
   }
 }
