--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "git@github.com:legworkstudio/Legwork2015.git"
   },
   "scripts": {
-    "start": "forever ./www/server"
+    "start": "forever ./www/server",
+    "restart": "forever restart"
   },
   "browser": {
     "plugin": "./src/javascript/vendor/jquery-plugin.js"
