--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "pixi": "~3.0",
     "froogaloop": "~0.1.0",
     "jquery.cookie": "~1.4.1",
-    "jquery-mousewheel": "~3.1.12"
+    "jquery-mousewheel": "~3.1.12",
+    "matter-js": "~0.8.0-alpha"
   }
 }
