--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "froogaloop": "~0.1.0",
     "jquery.cookie": "~1.4.1",
     "jquery-mousewheel": "~3.1.12",
-    "matter-js": "~0.8.0-alpha"
+    "matter-js": "~0.8.0-alpha",
+    "svg4everybody": "~1.0.0"
   }
 }
